--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,41 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <data>
-
-
-
+        <import type="com.ltthuc.habit.databinding.ItemRssLinkBinding" />
+        <import type="com.ltthuc.habit.data.network.response.RssCatResp" />
+        <variable
+            name="viewModel"
+            type="com.ltthuc.habit.ui.activity.HomeActivityVM" />
+        <variable
+            name="adapter"
+            type="com.ezyplanet.core.ui.base.adapter.SingleLayoutAdapter&lt;RssCatResp, ItemRssLinkBinding&gt;" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container"
-            android:background="@color/white"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
 
+    <LinearLayout 
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical"
+        >
+
+        <com.ltthuc.habit.ui.widget.toolbar.BaseToolBar
+            android:id="@+id/baseToolBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".ui.activity.main.MainActivity">
+            android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:showBack="@{true}"
+            app:titleBar='@{"Home"}' />
 
-        <FrameLayout
-                android:id="@+id/fragment_container"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-        />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomNavigationView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:menu="@menu/navigation"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="8dp"
+            android:adapter="@{adapter}"
+            android:padding="16dp"
+            app:layoutManager="com.ezyplanet.core.ui.widget.scroll.GridLayoutManagerWrapper"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:spanCount="2" />
+
+        <!--<FrameLayout-->
+        <!--android:id="@+id/fragment_container"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="0dp"-->
+        <!--app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--/>-->
+
+        <!--<com.google.android.material.bottomnavigation.BottomNavigationView-->
+        <!--android:id="@+id/bottomNavigationView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/white"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:menu="@menu/navigation"/>-->
+
+    </LinearLayout>
 </layout>
