--- a/app/src/main/res/layout/item_list_post.xml
+++ b/app/src/main/res/layout/item_list_post.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.ltthuc.habit.ui.activity.HomeActivityVM" />
+            type="com.ltthuc.habit.ui.activity.listpost.ListPostVM" />
     </data>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,20 +20,23 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        <androidx.constraintlayout.widget.ConstraintLayout
+                xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
+                                android:layout_marginBottom="16dp"
             android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="0dp"
+                style="@style/text_roboto_header"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:fontFamily="@font/roboto"
+
                 android:text="@{item.title}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="#DE000000"
                 app:layout_constraintEnd_toStartOf="@+id/image"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,8 +49,8 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
-                android:fontFamily="@font/roboto"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                style="@style/text_roboto"
+
                 android:textColor="#8A000000"
                 android:text="@{item.formatPubDate()}"
                 app:layout_constraintEnd_toStartOf="@+id/image"
@@ -61,6 +64,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
+                srcImageUrl="@{item.image}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,13 +76,44 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="24dp"
-                android:fontFamily="@font/roboto"
+                style="@style/text_roboto"
                 android:textColor="#DE000000"
                 android:text="@{item.catName}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+
                 app:layout_constraintTop_toBottomOf="@+id/image" />
+            <Button android:layout_width="0dp"
+                    style="@style/text_roboto"
+                    android:text="@string/post_now"
+                    android:id="@+id/btPostNow"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintHorizontal_weight="5"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/bg_bt_blue"
+                    android:textColor="@color/white"
+                    android:layout_marginEnd="16dp"
+                    android:onClick="@{()->viewModel.postNow(item)}"
+                    app:layout_constraintTop_toBottomOf="@id/categories"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/btSchedule"
+                    android:layout_height="wrap_content"/>
+
+            <Button android:layout_width="0dp"
+                    style="@style/text_roboto"
+                    android:id="@+id/btSchedule"
+                    android:text="@string/schedule"
+                    android:background="@drawable/bg_bt_blue"
+                    app:layout_constraintHorizontal_weight="5"
+                    android:layout_marginTop="16dp"
+
+                    android:layout_marginEnd="16dp"
+                    android:textColor="@color/white"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/btPostNow"
+                    app:layout_constraintTop_toBottomOf="@id/categories"
+                    android:layout_height="wrap_content"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
