--- a/app/src/main/res/layout/item_rss_link.xml
+++ b/app/src/main/res/layout/item_rss_link.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="item"
             type="com.ltthuc.habit.data.network.response.RssCatResp" />
@@ -10,25 +13,44 @@
             type="com.ltthuc.habit.ui.activity.HomeActivityVM" />
     </data>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:gravity="center"
-    android:onClick="@{()->viewModel.onItemClicked(item)}"
-    android:layout_height="match_parent">
-    <ImageView
+    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="wrap_content"
-        android:src="@mipmap/ic_launcher"
-        srcImageUrl="@{item.thumb_url}"
-        android:layout_height="wrap_content" />
-    <TextView
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="8dp"
 
-        android:layout_width="wrap_content"
-        style="@style/text_roboto"
-        tools:text="website"
-        android:text="@{item.title}"
-        android:layout_height="wrap_content" />
+        app:cardElevation="3dp"
+        android:layout_margin="4dp"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="4dp">
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:onClick="@{()->viewModel.onItemClicked(item)}"
+            android:orientation="vertical">
+
+            <ImageView
+                srcImageUrl="@{item.thumb_url}"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+
+                style="@style/text_roboto"
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content"
+
+                android:gravity="center"
+                android:text="@{item.title}"
+                android:padding="8dp"
+
+                tools:text="websiteddddd" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
