--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,8 +12,12 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
     <style name="text_roboto">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/app_444444</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">14sp</item>
+
+    </style>
+    <style name="text_roboto_header">
         <item name="android:textColor">@color/app_444444</item>
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textSize">15sp</item>
