--- a/app/src/main/res/layout/item_cat_topic.xml
+++ b/app/src/main/res/layout/item_cat_topic.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+
+    <data>
+
+        <variable
+            name="item"
+            type="com.ltthuc.habit.data.entity.Post" />
+
+        <variable
+            name="viewModel"
+            type="com.ltthuc.habit.ui.fragment.articlelist.ArticleListVM" />
+    </data>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:id="@+id/search_tab_results_topic_row_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -50,3 +62,4 @@
         android:textSize="@dimen/search_result_topic_item_subtitle_textSize"
         android:visibility="visible" />
 </RelativeLayout>
+</layout>
