--- a/app/src/main/res/layout/toolbar_category_detail.xml
+++ b/app/src/main/res/layout/toolbar_category_detail.xml
@@ -55,8 +55,7 @@
                 android:scaleType="center"
                 android:textColor="@color/white_75"
                 android:textSize="18sp"
-                android:visibility="visible"
-
+                android:visibility="gone"
                 tools:text="title bar" />
 
 
