--- a/app/src/main/res/layout/item_cat_video.xml
+++ b/app/src/main/res/layout/item_cat_video.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+
+    <data>
+
+        <variable
+            name="item"
+            type="com.ltthuc.habit.data.entity.Post" />
+
+        <variable
+            name="viewModel"
+            type="com.ltthuc.habit.ui.fragment.videolist.VideoListVM" />
+    </data>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/search_tab_results_video_row_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -60,3 +71,4 @@
         android:textColor="@color/light_gray"
         android:textSize="@dimen/search_result_video_item_subtitle_textSize" />
 </RelativeLayout>
+</layout>
