--- a/app/src/main/res/layout/item_cat_video.xml
+++ b/app/src/main/res/layout/item_cat_video.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -20,7 +20,9 @@
     android:paddingStart="@dimen/padding_base_2x"
     android:paddingTop="@dimen/padding_base_2x"
     android:paddingEnd="@dimen/padding_base_2x"
-    android:paddingBottom="@dimen/padding_base_3x">
+    android:paddingBottom="@dimen/padding_base_3x"
+    android:onClick="@{()->viewModel.onItemClicked(item)}"
+    >
 
     <ImageView
         android:id="@+id/search_tab_results_video_row_image"
@@ -30,17 +32,19 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/margin_base_2x"
         android:adjustViewBounds="true"
+        srcImageUrl="@{item.imgLink}"
         android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/search_tab_results_video_row_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignTop="@id/search_tab_results_video_row_image"
         android:layout_toRightOf="@+id/search_tab_results_video_row_image"
         android:ellipsize="end"
         android:lineSpacingMultiplier="1.1"
         android:maxLines="2"
+        android:text="@{item.title}"
         android:textColor="@android:color/white"
         android:textSize="@dimen/search_result_video_item_title_textSize" />
 
@@ -48,27 +52,18 @@
         android:id="@+id/search_tab_results_video_row_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/search_tab_results_video_row_title"
-        android:layout_marginTop="@dimen/margin_base"
+
+
         android:layout_toRightOf="@+id/search_tab_results_video_row_image"
-        android:drawableLeft="@drawable/ic_home_black_36dp"
+        android:drawableLeft="@drawable/ic_time"
         android:drawablePadding="@dimen/padding_base_h"
         android:letterSpacing="0.1"
+        android:text="@{item.duration}"
+        tools:text="1:45"
         android:textColor="@color/light_gray"
+        android:layout_alignBottom="@id/search_tab_results_video_row_image"
         android:textSize="@dimen/search_result_video_item_subtitle_textSize" />
 
-    <TextView
-        android:id="@+id/search_tab_results_video_row_views"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/search_tab_results_video_row_title"
-        android:layout_marginLeft="@dimen/margin_base_2x"
-        android:layout_marginTop="@dimen/margin_base"
-        android:layout_toRightOf="@+id/search_tab_results_video_row_duration"
-        android:drawableLeft="@drawable/ic_home_black_36dp"
-        android:drawablePadding="@dimen/padding_base_h"
-        android:letterSpacing="0.1"
-        android:textColor="@color/light_gray"
-        android:textSize="@dimen/search_result_video_item_subtitle_textSize" />
+
 </RelativeLayout>
 </layout>
