--- a/app/src/main/res/layout/item_cat_topic.xml
+++ b/app/src/main/res/layout/item_cat_topic.xml
@@ -21,7 +21,9 @@
     android:paddingStart="@dimen/padding_base_2x"
     android:paddingTop="@dimen/padding_base"
     android:paddingEnd="@dimen/padding_base_2x"
-    android:paddingBottom="@dimen/padding_base">
+    android:paddingBottom="@dimen/padding_base"
+    android:onClick="@{()->viewModel.onItemClicked(item)}"
+    >
 
     <ImageView
         android:id="@+id/search_tab_results_topic_row_image"
@@ -31,6 +33,7 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="@dimen/margin_base_2x"
         android:adjustViewBounds="true"
+        srcImageUrl="@{item.imgLink}"
         android:scaleType="centerCrop" />
 
     <TextView
@@ -44,6 +47,7 @@
         android:ellipsize="end"
         android:lineSpacingMultiplier="1.1"
         android:maxLines="3"
+        android:text="@{item.title}"
         android:textColor="@android:color/white"
         android:textSize="@dimen/search_result_topic_item_title_textSize" />
 
@@ -58,8 +62,10 @@
         android:drawablePadding="@dimen/padding_base_h"
         android:gravity="left|center_vertical|center_horizontal|center|start"
         android:letterSpacing="0.1"
+
         android:textColor="@color/light_gray"
         android:textSize="@dimen/search_result_topic_item_subtitle_textSize"
-        android:visibility="visible" />
+
+        android:visibility="gone" />
 </RelativeLayout>
 </layout>
