--- a/app/src/main/res/layout/view_category_detail.xml
+++ b/app/src/main/res/layout/view_category_detail.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.ltthuc.habit.ui.activity.categorydetail.CategoryDetailVM" />
     </data>
 <com.google.android.material.appbar.AppBarLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:id="@+id/feed_hero_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,13 +25,13 @@
         android:fitsSystemWindows="true"
         android:focusableInTouchMode="true"
         android:minHeight="@dimen/feed_hero_minHeight"
-        android:visibility="invisible"
         app:collapsedTitleTextAppearance="?attr/feedCollapsedToolbarStyle"
         app:contentScrim="@android:color/black"
         app:expandedTitleMarginBottom="0dp"
         app:expandedTitleTextAppearance="?attr/feedExpandedToolbarStyle"
+        app:scrimAnimationDuration="200"
         app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        app:scrimAnimationDuration="200">
+        >
 
         <ImageView
             android:id="@+id/feed_hero_image"
@@ -41,8 +42,9 @@
             android:fitsSystemWindows="true"
             android:scaleType="centerCrop"
             app:layout_collapseMode="parallax"
-            srcImageUrl="@{viewModel.model."
-            app:layout_collapseParallaxMultiplier="0.5" />
+            srcImageUrl="@{viewModel.model.image}"
+            app:layout_collapseParallaxMultiplier="0.5"
+            />
 
         <View
             android:layout_width="match_parent"
@@ -50,9 +52,9 @@
             android:layout_gravity="bottom"
             android:background="@color/white_50"
             app:layout_collapseMode="parallax"
-            app:layout_collapseParallaxMultiplier="0.3" />
+            />
 
-        <TextView
+        <LinearLayout
             android:id="@+id/feed_hero_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -61,22 +63,107 @@
             android:gravity="left"
             android:orientation="vertical"
             android:paddingBottom="?attr/actionBarSize"
-            android:textColor="@color/white"
             app:layout_collapseMode="parallax"
             app:layout_collapseParallaxMultiplier="0.3">
 
-
-        </TextView>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.ltthuc.habit.ui.widget.toolbar.ToolbarCategoryDetail
-                android:id="@+id/daily_feed_toolbar"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/feed_daily_toolbar_height"
-                app:titleBar='@{@string/feed"}' />
-        </FrameLayout>
+                android:layout_height="0dp"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:gravity="bottom"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/padding_base_2x"
+                android:paddingEnd="@dimen/follow_button_size">
+
+
+                <TextView
+                    android:id="@+id/feed_hero_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginBottom="@dimen/margin_base_h"
+                    android:gravity="start"
+                    android:fontFamily="@font/cabin_condensed_regular"
+                    android:paddingRight="@dimen/padding_base_4x"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/feed_hero_title_textSize"
+
+                    android:text="abc"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/feed_hero_subtitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginTop="@dimen/margin_base_h"
+                    android:layout_marginBottom="@dimen/margin_base_3x"
+                    android:gravity="start"
+
+                    android:text="abc"
+
+                    android:paddingRight="@dimen/padding_base_4x"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/feed_hero_subtitle_textSize" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:contentInsetStart="0dp"
+            android:contentInsetEnd="0dp"
+            android:contentInsetRight="0dp"
+            app:contentInsetEnd="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
+            android:background="?attr/themeBackground"
+            app:layout_collapseMode="pin"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+
+
+            >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/roboto"
+                    android:gravity="center"
+                    android:minWidth="?attr/actionBarSize"
+                    android:scaleType="center"
+                    android:textColor="@color/white_75"
+                    android:textSize="18sp"
+                    android:visibility="gone"
+                   />
+
+
+                <ImageView
+                    android:id="@+id/imBack"
+                    android:layout_width="20dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="10dp"
+                    android:tint="@color/white"
+
+                    android:scaleType="center"
+                    app:srcCompat="@drawable/ic_nav_back" />
+
+
+            </RelativeLayout>
+
+
+        </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         <com.google.android.material.tabs.TabLayout
@@ -84,9 +171,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="bottom"
-            android:background="@null"
+            android:background="@color/color_transparent"
             android:elevation="6dp"
-            android:visibility="gone"
             app:tabIndicatorColor="@color/brighter_blue"
             app:tabIndicatorHeight="@dimen/tab_indicator_height"
             app:tabMaxWidth="0dp"
