--- a/app/src/main/res/layout/frag_article_list.xml
+++ b/app/src/main/res/layout/frag_article_list.xml
@@ -17,13 +17,17 @@
 
 
 
-
+      <FrameLayout
+          android:layout_width="match_parent"
+          android:orientation="vertical"
+          android:background="?attr/themeBackground"
+          android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
             android:paddingTop="32dp"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/themeBackground"
+
             android:adapter="@{adapter}"
             app:layoutManager="com.ezyplanet.core.ui.widget.scroll.LinearLayoutManagerWrapper"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,5 +39,5 @@
 
              />
 
-
+      </FrameLayout>
 </layout>
