--- a/app/src/main/res/layout/frag_video_list.xml
+++ b/app/src/main/res/layout/frag_video_list.xml
@@ -15,14 +15,18 @@
     </data>
 
 
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:background="?attr/themeBackground"
+        android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:paddingTop="32dp"
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/themeBackground"
+
             android:adapter="@{adapter}"
 
             app:layoutManager="com.ezyplanet.core.ui.widget.scroll.LinearLayoutManagerWrapper"
@@ -33,5 +37,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             />
+    </FrameLayout>
 
 </layout>
