--- a/app/src/main/res/layout/include_youtube_detail.xml
+++ b/app/src/main/res/layout/include_youtube_detail.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.ltthuc.habit.ui.activity.categorydetail.CategoryDetailVM" />
+            type="com.ltthuc.habit.ui.activity.ytDetail.YtDetailVM" />
     </data>
     <com.google.android.material.appbar.AppBarLayout
 
@@ -36,13 +36,13 @@
             <ImageView
                 android:id="@+id/feed_hero_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="250dp"
                 android:adjustViewBounds="true"
                 android:alpha="0.8"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                srcImageUrl="@{viewModel.model.image}"
+                srcImageUrl="@{viewModel.model.thumnail}"
                 app:layout_collapseParallaxMultiplier="0.5"
                 />
 
