--- a/app/src/main/res/layout/view_category_detail.xml
+++ b/app/src/main/res/layout/view_category_detail.xml
@@ -30,19 +30,21 @@
         app:expandedTitleMarginBottom="0dp"
         app:expandedTitleTextAppearance="?attr/feedExpandedToolbarStyle"
         app:scrimAnimationDuration="200"
+        app:title="adfasdasda"
         app:layout_scrollFlags="scroll|exitUntilCollapsed"
         >
 
         <ImageView
             android:id="@+id/feed_hero_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:adjustViewBounds="true"
             android:alpha="0.8"
             android:fitsSystemWindows="true"
             android:scaleType="centerCrop"
             app:layout_collapseMode="parallax"
             srcImageUrl="@{viewModel.model.image}"
+            android:src="@drawable/bg_exploremore_en"
             app:layout_collapseParallaxMultiplier="0.5"
             />
 
@@ -58,7 +60,7 @@
             android:id="@+id/feed_hero_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="left"
+            android:layout_gravity="bottom"
             android:background="@drawable/feed_hero_gradient_background"
             android:gravity="left"
             android:orientation="vertical"
@@ -119,9 +121,8 @@
             app:contentInsetLeft="0dp"
             app:contentInsetRight="0dp"
             app:contentInsetStart="0dp"
-            android:background="?attr/themeBackground"
+            android:background="@null"
             app:layout_collapseMode="pin"
-            app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
 
@@ -164,14 +165,12 @@
 
 
         </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.CollapsingToolbarLayout>
-
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_gravity="bottom"
-            android:background="@color/color_transparent"
+            android:background="@null"
             android:elevation="6dp"
             app:tabIndicatorColor="@color/brighter_blue"
             app:tabIndicatorHeight="@dimen/tab_indicator_height"
@@ -180,5 +179,8 @@
             app:tabPadding="-1dp"
             app:tabSelectedTextColor="@color/brighter_blue"
             app:tabTextColor="@color/white_50" />
+    </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+
 </com.google.android.material.appbar.AppBarLayout>
 </layout>
