--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
 
@@ -20,6 +19,13 @@
             name="adapter"
             type="com.ezyplanet.core.ui.base.adapter.SingleLayoutAdapter&lt;CatResp, ItemCategoryBinding&gt;" />
     </data>
+    <androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
 
@@ -141,11 +147,17 @@
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
-        <include
-            layout="@layout/bottom_navigation"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll"
-            app:listener="@{listener}" />
+        <!--<include-->
+            <!--layout="@layout/bottom_navigation"-->
+            <!--android:fitsSystemWindows="true"-->
+            <!--app:layout_scrollFlags="scroll"-->
+            <!--app:listener="@{listener}" />-->
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <com.ltthuc.habit.ui.widget.NavigationViewApp
+        android:id="@+id/home_navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"/>
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
