--- a/app/src/main/res/layout/activity_category_detail.xml
+++ b/app/src/main/res/layout/activity_category_detail.xml
@@ -14,9 +14,15 @@
 
 
     </data>
+    <androidx.drawerlayout.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 <androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:id="@+id/tag_feed_layout"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
@@ -40,8 +46,14 @@
 
 
 
-    <include android:fitsSystemWindows="true" app:layout_scrollFlags="scroll"
-        layout="@layout/bottom_navigation"/>
+    <!--<include android:fitsSystemWindows="true" app:layout_scrollFlags="scroll"-->
+        <!--layout="@layout/bottom_navigation"/>-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <com.ltthuc.habit.ui.widget.NavigationViewApp
+        android:id="@+id/home_navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"/>
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
