--- a/app/src/main/res/layout/activity_youtube_detail.xml
+++ b/app/src/main/res/layout/activity_youtube_detail.xml
@@ -14,9 +14,16 @@
 
 
     </data>
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.drawerlayout.widget.DrawerLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+
+
         android:id="@+id/tag_feed_layout"
         android:layout_width="match_parent"
         android:fitsSystemWindows="true"
@@ -58,8 +65,14 @@
 
         </ImageView>
 
-        <include android:fitsSystemWindows="true" app:layout_scrollFlags="scroll"
-            layout="@layout/bottom_navigation"/>
+        <!--<include android:fitsSystemWindows="true" app:layout_scrollFlags="scroll"-->
+            <!--layout="@layout/bottom_navigation"/>-->
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <com.ltthuc.habit.ui.widget.NavigationViewApp
+            android:id="@+id/home_navigation_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"/>
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
