--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -716,6 +716,7 @@
     <color name="white_75">#bfffffff</color>
     <color name="app_2882C9">#2882C9</color>
     <color name="app_6C6C6C">#6C6C6C</color>
+    <color name="black">#000000</color>
 
 
 </resources>
