--- a/app/src/main/res/layout/item_quotes_list.xml
+++ b/app/src/main/res/layout/item_quotes_list.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.ltthuc.habit.ui.activity.feed.FeedVM" />
+            type="com.ltthuc.habit.ui.activity.quotes.QuotesVM" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/feed_hero_gradient_background"
-        android:onClick="@{()->viewModel.openPostDetail(item)}">
+       >
 
         <FrameLayout
             android:layout_width="match_parent"
