--- a/app/src/main/res/layout/toolbar_quote.xml
+++ b/app/src/main/res/layout/toolbar_quote.xml
@@ -7,17 +7,17 @@
 
         <variable
             name="listener"
-            type="com.ltthuc.habit.ui.widget.listener.ToolbarListener">
+            type="com.ltthuc.habit.ui.widget.listener.ToolbarQuoteListener">
 
         </variable>
 
         <variable
-            name="titleBar"
+            name="category"
             type="String" />
 
         <variable
-            name="showBack"
-            type="Boolean" />
+            name="sortBy"
+            type="String" />
     </data>
 
 
@@ -41,22 +41,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:layout_gravity="center"
-                android:fontFamily="@font/roboto"
-                android:gravity="center"
-                android:minWidth="?attr/actionBarSize"
-                android:scaleType="center"
-                android:textColor="@color/white_75"
-                android:textSize="18sp"
-                android:visibility="visible"
-
-                tools:text="title bar" />
-
 
             <ImageView
                 android:id="@+id/imMenu"
@@ -65,9 +49,39 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="10dp"
-                android:tint="@color/white_75"
-                android:onClick="@{()->listener.onMenu()}"
+                android:tint="@color/white"
+
                 app:srcCompat="@drawable/ic_menu" />
+            <TextView
+                android:layout_width="wrap_content"
+                style="?attr/toolBarTextStyle"
+                tools:text="All"
+                android:id="@+id/tvCategory"
+                android:layout_toRightOf="@id/imMenu"
+                android:layout_marginLeft="50dp"
+                android:drawablePadding="8dp"
+                android:layout_centerInParent="true"
+                android:text="@{category}"
+                android:visibility="gone"
+                android:drawableRight="@drawable/ic_arrow_drop_down_white_24dp"
+                android:layout_height="wrap_content"
+
+
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                style="?attr/toolBarTextStyle"
+                android:id="@+id/tvSortBy"
+                tools:text="by Newest"
+                android:text="@{sortBy}"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:drawableRight="@drawable/ic_filter_list_white_24dp"
+                android:drawablePadding="8dp"
+                android:layout_centerInParent="true"
+                android:layout_height="wrap_content"
+
+                />
 
 
         </RelativeLayout>
