--- a/app/src/main/res/layout/view_category_detail.xml
+++ b/app/src/main/res/layout/view_category_detail.xml
@@ -149,7 +149,7 @@
 
 
                 <ImageView
-                    android:id="@+id/imBack"
+                    android:id="@+id/imMenu"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
