--- a/app/src/main/res/layout/view_category_detail.xml
+++ b/app/src/main/res/layout/view_category_detail.xml
@@ -123,6 +123,7 @@
             app:contentInsetStart="0dp"
             android:background="@null"
             app:layout_collapseMode="pin"
+            android:id="@+id/toolbarCatDetail"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
 
